<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAB5F3"
    tools:context=".Gal" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_contact"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:layout_marginStart="118dp"
        android:layout_marginTop="23dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrowleft"
        android:layout_marginStart="74dp"
        android:layout_marginTop="32.27dp"
        android:contentDescription="@string/todo9" />

    <ImageButton
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrowright"
        android:background="@drawable/arrowright"
        android:layout_marginStart="310.89dp"
        android:layout_marginTop="32.27dp"
        android:contentDescription="@string/todo10" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rectangle_33"
        android:layout_marginStart="38dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/todo11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Find_contact"
        android:textColor="#808080"
        android:textSize="18sp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="101dp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anna"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="189dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/albina"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="295dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anton"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="401dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grandma"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="507dp"  />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boris"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="613dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/anna"
        android:layout_marginStart="38dp"
        android:layout_marginTop="181dp"
        android:contentDescription="@string/todo13" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/albina"
        android:layout_marginStart="38dp"
        android:layout_marginTop="287dp"
        android:contentDescription="@string/todo12" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/healthicons_ui_user_profile"
        android:layout_marginStart="43.33dp"
        android:layout_marginTop="398dp"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43.33dp"
        android:layout_marginTop="499dp"
        app:srcCompat="@drawable/healthicons_ui_user_profile" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/boris"
        android:layout_marginStart="38dp"
        android:layout_marginTop="605dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>