<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #E2E2E2"
    android:backgroundTint="#E2E2E2"
    tools:context=".number" >

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="411dp"
        android:layout_height="498dp"
        app:srcCompat="@drawable/rectangle_32"
        android:layout_marginTop="233dp"
        android:contentDescription="@string/todo14" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/line_1"
        android:layout_marginTop="233dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/imageView15"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="623dp"
        android:background="@drawable/ellipse_1"
        app:srcCompat="@drawable/ellipse_1"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="26.83dp"
        android:layout_height="38.33dp"
        app:srcCompat="@drawable/telephon"
        android:layout_marginTop="636.83dp"
        android:layout_marginStart="193.37dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:layout_marginTop="274dp"
        android:layout_marginStart="71dp"
        android:textSize="48sp"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:layout_marginTop="274dp"
        android:layout_marginStart="194dp"
        android:textSize="48sp"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:layout_marginTop="274dp"
        android:layout_marginStart="317dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:layout_marginTop="365dp"
        android:layout_marginStart="71dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:layout_marginTop="365dp"
        android:layout_marginStart="192dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:layout_marginTop="365dp"
        android:layout_marginStart="316dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:layout_marginTop="465dp"
        android:layout_marginStart="71dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:layout_marginTop="465dp"
        android:layout_marginStart="192dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:layout_marginTop="465dp"
        android:layout_marginStart="313dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star"
        android:layout_marginTop="547dp"
        android:layout_marginStart="72dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginTop="547dp"
        android:layout_marginStart="194dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_11"
        android:layout_marginTop="547dp"
        android:layout_marginStart="313dp"
        android:textSize="48sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/delete1"
        android:layout_marginTop="644dp"
        android:layout_marginStart="314.5dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/delete2"
        android:layout_marginTop="651.5dp"
        android:layout_marginStart="331dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/delete3"
        android:layout_marginTop="651.5dp"
        android:layout_marginStart="331dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/toc"
        android:layout_marginTop="641.63dp"
        android:layout_marginStart="81.12dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81.12dp"
        android:layout_marginTop="653.12dp"
        app:srcCompat="@drawable/toc"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81.12dp"
        android:layout_marginTop="664.62dp"
        app:srcCompat="@drawable/toc"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>